--- a/home/css/styles.css
+++ b/home/css/styles.css
@@ -7,3 +7,10 @@
 .centered-text{
     style="text-align: center"
 }
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: "Liberation Mono", monospace;
+
+}
