--- a/home/css/styles.css
+++ b/home/css/styles.css
@@ -1,7 +1,11 @@
-.banner-image {
+.panel {
+  height: 100vh;
   width: 100%;
   display: block;
   opacity: 0.8; /* 80% opacity */
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 
 .centered-text{
@@ -13,4 +17,6 @@ body {
     padding: 0;
     font-family: "Liberation Mono", monospace;
 
+    background: black;
+    color: white;
 }
