--- a/home/css/styles.css
+++ b/home/css/styles.css
@@ -18,13 +18,14 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  right: 50%;
   transform: translate(-50%, -50%);
   width: 75%;
   padding: 2rem;
   background-color: rgba(0, 0, 0, 0.6);
   color: white;
   border-radius: 10px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.01);
   text-align: center;
 }
 
