--- a/home/css/styles.css
+++ b/home/css/styles.css
@@ -54,7 +54,7 @@
 
 
 .slide{
-  position: absolute;
+  position: sticky;
   top: 50%;
   left: 50%;
   right: 50%;
@@ -66,6 +66,7 @@
   border-radius: 10px;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.01);
   text-align: center;
+  z-index: 10;
 }
 
 body {
