--- a/home/css/styles.css
+++ b/home/css/styles.css
@@ -1,11 +1,14 @@
 .panel {
   position: relative;
+  background-size: cover;
+
   height: 100vh;
   width: 100%;
-  display: block;
+  display: flex;
   opacity: 0.8; /* 80% opacity */
   background-size: cover;
   background-position: center center;
+  align-items: flex-start; 
   background-repeat: no-repeat;
 }
 
@@ -26,22 +29,11 @@
   width: 75%;
   background-color: rgba(0, 0, 0, 0.6);
   padding: 1rem;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   gap: 1rem; /* space between boxes */
 }
 
-.navbar a {
-  color: white;
-  text-decoration: none;
-  font-family: "Liberation Mono", monospace;
-  padding: 0.5rem 1rem;
-  border-radius: 6px;
-  background-color: rgba(255, 255, 255, 0.1); /* 👈 box background */
-  /*border: 1px solid rgba(255, 255, 255, ); /* 👈 subtle border */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  transition: background-color 0.3s ease, transform 0.2s ease;
-}
 
 .navbar a:hover {
   background-color: rgba(255, 255, 255, 0.2);
