--- a/home/css/styles.css
+++ b/home/css/styles.css
@@ -22,10 +22,13 @@
 
 .navbar {
   display: flex;
+
   justify-content: space-around;
   
   left: 50%;
   right: 50%;
+  transform: translate(-50%, -50%);
+
   width: 75%;
   background-color: rgba(0, 0, 0, 0.6);
   padding: 1rem;
