--- a/home/css/styles.css
+++ b/home/css/styles.css
@@ -38,6 +38,16 @@
 }
 
 
+.navbar a {
+  color: rgb(221, 177, 177);
+  text-decoration: none;
+  margin: 0 1rem;
+  font-family: "Liberation Mono", monospace;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
 .navbar a:hover {
   background-color: rgba(255, 255, 255, 0.2);
   transform: translateY(-2px);
