--- a/about/static/css/a_styles.css
+++ b/about/static/css/a_styles.css
@@ -1,3 +1,12 @@
+
+body {
+    margin: 0;
+    padding-top: 70px;
+    font-family: "Liberation Mono", monospace;
+
+    background: black;
+}
+
 .panel {
   background-size: cover;
 
