--- a/contact/static/css/c_styles.css
+++ b/contact/static/css/c_styles.css
@@ -1,3 +1,12 @@
+body {
+    margin: 0;
+    padding-top: 70px;
+    font-family: "Liberation Mono", monospace;
+
+    background: black;
+}
+
+
 .panel {
   background-size: cover;
 
@@ -50,3 +59,4 @@
   background-color: rgba(255, 255, 255, 0.2);
   transform: translateY(-2px);
 }
+
