--- a/projects/static/css/p_styles.css
+++ b/projects/static/css/p_styles.css
@@ -1,10 +1,18 @@
+
+body {
+    margin: 0;
+    padding-top: 70px;
+    font-family: "Liberation Mono", monospace;
+
+    background: black;
+}
+
 .panel {
   background-size: cover;
-
   height: 100vh;
   width: 100%;
   display: flex;
-  opacity: 0.8; /* 80% opacity */
+  opacity: 0.8; 
   background-size: cover;
   background-position: center center;
   align-items: flex-start; 
