--- a/contact/static/css/c_styles.css
+++ b/contact/static/css/c_styles.css
@@ -60,3 +60,19 @@ body {
   transform: translateY(-2px);
 }
 
+
+.slide{
+  position: relative;
+  top: 50%;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%, -50%);
+  width: 75%;
+  padding: 2rem;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.01);
+  text-align: center;
+  z-index: 10;
+}
