--- a/projects/static/css/p_styles.css
+++ b/projects/static/css/p_styles.css
@@ -20,7 +20,7 @@ body {
 }
 
 .slide {
-    background-color: rgba(0, 0, 0, 0.6); /* semi-transparent black */
+    background-color: rgba(0, 0, 0, 0.2); /* semi-transparent black */
     color: white;
     padding: 20px;
     border-radius: 10px;
@@ -64,7 +64,7 @@ body {
   transition: background-color 0.3s ease;
 }
 
-.navbar a:hover {
+.navbar .project-box a:hover {
   background-color: rgba(255, 255, 255, 0.2);
   transform: translateY(-2px);
 }
@@ -90,9 +90,8 @@ body {
 }
 
 .project-box {
-  margin: 1.25rem 0;          
+  margin: 1.5rem 0;          
   border: 1px solid #181717;     
   border-radius: 6px;         
-  background-color: #0000009d;  
-  
+  background-color:  rgba(0, 0, 0, 0.8);
 }
