--- a/home/static/css/h_styles.css
+++ b/home/static/css/h_styles.css
@@ -77,3 +77,16 @@ body {
   z-index: 10;
 }
 
+
+a {
+    color: rgb(255, 176, 225);              /* Link color */
+    text-decoration: none;       /* Remove underline */
+    transition: all 0.3s ease;   /* Smooth hover effects */
+    font-weight: 500;            /* Slightly bolder */
+}
+
+/* Hover state */
+a:hover {
+    color:rgb(218, 108, 159);              /* Darker on hover */
+    text-decoration: underline;  /* Add underline on hover */
+}
